--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,7 @@
 @import url(font-awesome.min.css);
 @import url("http://fonts.googleapis.com/css?family=Roboto:400,700");
 
-/*
-	Eventually by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
+
 
 /* Reset */
 
@@ -16,6 +12,8 @@
 		font-size: 100%;
 		font: inherit;
 		vertical-align: baseline;
+	
+
 	}
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -24,8 +22,19 @@
 
 	body {
 		line-height: 1;
+
+	
 	}
 
+#main{
+
+
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	width: auto;
+
+}
 	ol, ul {
 		list-style: none;
 	}
@@ -365,14 +374,14 @@
 	}
 
 	p {
-		margin: 0 0 2em 0;
+		/*margin: 0 0 0 0;*/
 	}
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #fff;
 		font-weight: 700;
 		line-height: 1em;
-		margin: 0 0 1em 0;
+		margin: 0 0 0 0;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -383,6 +392,9 @@
 	h1 {
 		font-size: 2.5em;
 		line-height: 1.25em;
+
+
+
 	}
 
 	h2 {
@@ -473,11 +485,13 @@
 		color: rgba(255, 255, 255, 0.5);
 		position: relative;
 		margin: 0 0 1.5em 0;
+			margin-top: -1.5em;
+	
 	}
-
-	header h2 + p {
+	
+	header h1 + p {
 		font-size: 1.25em;
-		margin-top: -1em;
+		margin-top: -1.5em;
 		line-height: 1.5em;
 	}
 
@@ -588,7 +602,9 @@
 /* Form */
 
 	form {
-		margin: 0 0 2em 0;
+	margin: 0em auto;
+	/*align:center;*/
+	
 	}
 
 		form .message {
@@ -1009,9 +1025,16 @@
 
 /* Header */
 
+
+	#subheader{
+
+		margin: -0.5em 0 1em 0;
+
+	}
 	#header h1 {
 		font-size: 3.25em;
-		margin: 0 0 0.55em 0;
+		margin: -2em 0 0.55em 0;
+
 	}
 
 	#header p {
@@ -1051,6 +1074,12 @@
 		display: -ms-flex;
 		display: flex;
 		position: relative;
+
+	/*margin: 0em auto;*/
+	align:center;
+	width: 500px;
+	margin-left: 25em;
+
 	}
 
 		#signup-form input[type="text"],
@@ -1109,7 +1138,11 @@
 		color: rgba(255, 255, 255, 0.5);
 		left: 4em;
 		opacity: 0.5;
-		position: absolute;
+		clear: both;
+		position: fixed;
+		margin-left: 28em;
+
+		
 	}
 
 		#footer .icons {
